--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "mocha": "~2.5.1",
     "mustache": "~2.2.1",
     "proxyquire": "^1.3.1",
-    "raml-parser": "^0.8.16",
+    "raml-1-parser": "^0.2.26",
     "request": "^2.53.0",
     "source-map-support": "^0.4.0",
     "tv4": "^1.2.7",
